--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="main.css" />
-    <title>My First Javascript Application!</title>
+    <title>Brent's Projects!</title>
   </head>
 <body>
-    <h1>My first application!</h1>
-    <p>Welcome to <i>Learning Javasript, 3rd Edition</i>.</p>
-    <canvas id="mainCanvas"></canvas>
-    <script src="jQuery.js"></script>
-    <script src="paper.js"></script>
-
-    <script src="main.js"></script>
+    <h1>My Web Development and JavaScript Projects</h1>
+    <ul>
+      <li><a href="/Chapter_2/index.html">Chapter 2</a></li>
+      <li>Tribut Page for <a href="/StJohnClimacus/index.html">St. John Climacus
+      </a>, a Responsive Website project for freeCodeCamp</li>
   </body>
 </html>
