--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>My Web Development and JavaScript Projects</h1>
     <ul>
-      <li><a href="LearnJavaScript/Chapter_2/index.html">Chapter 2</a> project of <i> Learn JavaScript</i>, 3rd Edition</li>
-      <li>Tribute Page for <a href="LearnJavaScript/StJohnClimacus/index.html">St. John Climacus
+      <li><a href="Chapter_2/index.html">Chapter 2</a> project of <i> Learn JavaScript</i>, 3rd Edition</li>
+      <li>Tribute Page for <a href="StJohnClimacus/index.html">St. John Climacus
       </a>, a Responsive Website project for freeCodeCamp</li>
   </body>
 </html>
