--- a/StJohnClimacus/index.html
+++ b/StJohnClimacus/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <title>St. John Climacus</title>
   <style>
     html,body{
   font-family:"Trebuchet MS", Helvetica, sans-serif;
@@ -16,8 +17,8 @@
   background:#eee;
 }
 img{
-  max-width: 100%; 
-  display: block; 
+  max-width: 100%;
+  display: block;
   height: auto;
   margin: auto;
 }
