--- a/StJohnClimacus/index.html
+++ b/StJohnClimacus/index.html
@@ -3,54 +3,55 @@
 <head>
   <title>St. John Climacus</title>
   <style>
-    html,body{
-  font-family:"Trebuchet MS", Helvetica, sans-serif;
-  text-align:center;
-  min-width:260px;
-  color:#333;
+  html,body{
+font-family:"Trebuchet MS", Helvetica, sans-serif;
+text-align:center;
+min-width:260px;
+color:#333;
 }
 #main{
-  margin:30px auto;
-  padding:15px;
-  border:0px solid;
-  border-radius:5px;
-  background:#eee;
+margin:30px auto;
+padding:15px;
+border:0px solid;
+border-radius:5px;
+background:#D8BFD8;
 }
 img{
-  max-width: 100%;
-  display: block;
-  height: auto;
-  margin: auto;
+max-width: 100%;
+display: block; 
+height: auto;
+margin: auto;
 }
 #img-div{
-  margin:-5px;
-  margin-top:20px;
-  width:100%;
-  border:5px solid white;
-  background:white;
+margin:-5px;
+margin-top:20px;
+width:100%;
+border:5px solid white;
+border-radius:6px;
+background:#F5DEB3;
 }
 #img-caption{
-  margin:15px;
+margin:15px;
 }
 #headline{
-  margin-top:50px;
-  text-align:left;
+margin-top:50px;
+text-align:left;
 }
 ul{
-  max-width:600px;
-  margin:0 auto;
-  text-align:left;
+max-width:600px;
+margin:0 auto;
+text-align:left;
 }
 li{
-  margin: 10px;
+margin: 10px;
 }
 ol{
-  max-width:525px;
-  margin:0 auto;
-  text-align:left;
+max-width:525px;
+margin:0 auto;
+text-align:left;
 }
 blockquote{
-  font-style: italic;
+font-style: italic;
 }
 </style>
 </head>
