--- a/StJohnClimacus/index.html
+++ b/StJohnClimacus/index.html
@@ -127,7 +127,7 @@ font-style: italic;
       <h2><b>Kontakion</b></h2>
       <li>You offered us your teachings as fruits of everlasting freshness,</li>
       <li>To sweeten the hearts fo those who receive them with attention</li>
-      <li>O blessed and wise John, they are the rungs fo a ladder,</li>
+      <li>O blessed and wise John, they are the rungs of a ladder,</li>
       <li>Leading the souls of those who honor you from earth to Eternal Glory in Heaven</li>
 </div>
 </body>
