--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <li><a href="Chapter_2/index.html">Chapter 2</a> project of <i> Learn JavaScript</i>, 3rd Edition</li>
       <li>Tribute Page for <a href="StJohnClimacus/index.html">St. John Climacus
       </a>, a Responsive Website project for freeCodeCamp</li>
+      <li>A <a href="survey.html">Survey Form</a>, a Responsive Website project for freeCodeCamp</li>
   </body>
 </html>
