--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <li>Tribute Page for <a href="StJohnClimacus/index.html">St. John Climacus
       </a>, a Responsive Website project for freeCodeCamp</li>
       <li>A <a href="survey.html">Survey Form</a>, a Responsive Website project for freeCodeCamp</li>
+      <li>A <a href="https://codepen.io/brenttemp/full/mgRozK">Product Landing Page</a>, a Responsive Website project for freeCodeCamp</li>
   </body>
 </html>
