--- a/rocketCo.html
+++ b/rocketCo.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Rocket Company!</title>
-  <link rel="stylesheet" href="rocketCo.css"
+  <link rel="stylesheet" href="rocketCo.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
