Trying out a favicon

--- a/rocketCo.html
+++ b/rocketCo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rocket Company!</title>
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="rocketCo.css">
   <link rel="sytlesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
