--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Brent's Projects!</title>
+    <link rel="icon" href="favicon.png">
   </head>
 <body>
     <h1>My Web Development and JavaScript Projects</h1>
@@ -14,5 +15,11 @@
       <li>A <a href="survey.html">Survey Form</a>, a Responsive Website project for freeCodeCamp</li>
       <li>A <a href="rocketCo.html">Product Landing Page</a>, a Responsive Website project for freeCodeCamp</li>
       <li>A <a href="https://codepen.io/brenttemp/full/mgRozK">Product Landing Page at CodePen</a>, a Responsive Website project for freeCodeCamp</li>
+
+
+      <footer id="attribution">
+        <div>
+          Favicon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+        </div>
   </body>
 </html>
